<resources>
    <string name="app_name">ServerFirebase</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="t_n_ng_nh_p">Tên đăng nhập</string>
    <string name="m_t_kh_u">Mật khẩu</string>
    <string name="ng_nh_p">Đăng nhập</string>
    <string name="auto_login">Tự động đang nhập</string>
    <string name="ng_nh_p_cap">ĐĂNG NHẬP</string>
    <string name="quick_connect">Kết nối nhanh</string>
    <string name="a_ch_ip">Địa chỉ IP</string>
    <string name="c_ng">Cổng</string>
    <string name="connecting">Đang kết nối …</string>
    <string name="off">OFF</string>
    <string name="add_device">Add Device</string>
    <string name="add_mode">Add Mode</string>
    <string name="title_activity_weather_maps">Map</string>
    <string name="device_id">Chân Arduino</string>
    <string name="device_name">Tên</string>
    <string name="device_description">Mô tả</string>
    <string name="device_commnad">Command</string>
    <string name="add">Thêm thiết bị</string>
    <string name="on">ON</string>
    <string name="title_activity_room">RoomActivity</string>
    <string name="key_dev">key_developer</string>
    <string name="description_connect">Địa chỉ IP (IP Address): \r\nVào ứng dụng cài đặt (Setting) -> Wifi -> Nhấn vào Wifi của Arduino \r\nĐịa chỉ IP của Arduino có dạng: 192.168.4.x \r\nCổng (Port): 80</string>
    <string name="description_ip">Địa chỉ IP (IP Address): \r\n Vào ứng dụng cài đặt (Setting) -> Wifi -> Nhấn vào Wifi của Arduino \r\nĐịa chỉ IP của Arduino có dạng: 192.168.4.x</string>
    <string name="description_port">Cổng (Port): 80</string>
    <string name="system_security">Hệ thống bảo mật</string>
    <string name="alarm_system">Hệ thống báo cháy</string>
    <string name="door_system">Hệ thống cửa thông minh</string>
    <string-array name="spin_device">
        <item>Chi tiết</item>
        <item>Chỉnh sửa</item>
        <item>Xóa</item>
    </string-array>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>
    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user..</string>
    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Tạo tài khoản</string>
    <string name="sign_out">Đăng xuất</string>
    <string name="disconnect">Ngắt kết nối</string>
    <string name="loading">Đang tải …</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Đã đăng xuất</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="emailpassword_status_fmt">Email User: %s</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>
    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="action_sign_in_short">Đăng kí</string>
    <string name="email">Email</string>
    <string name="minimum_password">Mật khẩu quá ngắn, độ dài ít nhất 6 kí tự!</string>
    <string name="change_email">Thay đổi Email</string>
    <string name="change_password">Thay đổi mật khẩu</string>
    <string name="send_password_reset_email">Gửi email đặt lại mật khẩu</string>
    <string name="remove_user">Xóa ngươi dùng</string>
    <string name="new_pass">Mật khẩu mới</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Đăng nhập</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">Đăng nhập</string>
    <string name="btn_link_to_register">Chưa có tài khoản, đăng kí ngay!</string>
    <string name="btn_link_to_login">Đã có tài khoản, đăng nhập!</string>
    <string name="title_activity_reset_password">Đặt lại mật khẩu</string>
    <string name="btn_forgot_password">Quên mật khẩu?</string>
    <string name="btn_reset_password">Đặt lại mật khẩu</string>
    <string name="btn_back">Trở về</string>
    <string name="hint_new_email">Email mới</string>
    <string name="btn_change">Thay đổi</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Xóa</string>
    <string name="btn_sign_out">Đăng xuất</string>
    <string name="lbl_forgot_password">Quên mật khẩu?</string>
    <string name="forgot_password_msg">Nhập email tài khoản của bạn, chúng tôi sẽ gửi mail xác nhận đặt lại mật khẩu.</string>
    <string name="enter_email_address">Nhập địa chỉ email!</string>
    <string name="enter_password">Nhập mật khẩu!</string>
    <string name="logining">Đang đăng nhập …</string>
    <string name="remember_pass">Nhớ mật khẩu</string>
    <string name="send_email_fail">Gửi email thất bại</string>
    <string name="thong_ke">THỐNG KÊ</string>
    <string name="mode">CHẾ ĐỘ</string>
    <string name="device">THIẾT BỊ</string>
    <string name="camera">CAMERA</string>
    <string name="delete_failed">Xóa thất bại</string>
    <string name="do_you_want_delete_device">Bạn có muốn xóa thiết bị?</string>
    <string name="no">Không</string>
    <string name="yes">Có</string>
    <string name="h_th_ng_nh_s_ng_t_ng_c_n_b_ng">Hệ thống ánh sáng tự động cân bằng</string>
    <string name="h_th_ng_nh_s_ng_t_ng_on_off">Hệ thống ánh sáng tự động On/Off</string>
    <string name="nh_s_ng_t_ng">Ánh sáng tự động</string>
    <string name="connect">Kết nối</string>
    <string name="not_connect">Chưa kết nối</string>
    <string name="text_1">Kết nối thất bại, không phải giao thức SPP!</string>
    <string name="dis_connect">Ngắt kết nối</string>
    <string name="connected">Đã kết nối</string>
    <string name="devices">THIẾT BỊ</string>
    <string name="cmd">COMMAND</string>
    <string name="cam">CAMERA</string>
    <string name="title_activity_enter_pass_door">EnterPassDoorActivity</string>
    <string name="open_door">MỞ CỬA</string>
    <string name="A" translatable="false">A</string>
    <string name="B" translatable="false">B</string>
    <string name="C" translatable="false">C</string>
    <string name="D" translatable="false">D</string>
    <string name="E" translatable="false">E</string>
    <string name="F" translatable="false">F</string>
    <string name="X" translatable="false">X</string>
    <string name="Y" translatable="false">Y</string>
    <string name="sign" translatable="false">sign</string>
    <string name="coma" translatable="false">,</string>
    <string name="arcsin" translatable="false">sin⁻¹</string>
    <string name="arccos" translatable="false">cos⁻¹</string>
    <string name="arctan" translatable="false">tan⁻¹</string>
    <string name="i" translatable="false">i</string>
    <string name="percentage" translatable="false">%</string>
    <string name="integral" translatable="false">\u222B</string>
    <string name="dx">dX</string>
    <string name="dy">dY</string>
    <string name="solveForX">Solve for X</string>
    <string name="solveForY">Solve for Y</string>
    <string name="mod">#</string>
    <string name="parentheses" translatable="false">( )</string>
    <string name="nav_graph">Graph panel</string>
    <string name="function">Function panel</string>
    <string name="hexPanel">Hex panel</string>
    <string name="lock">Lock page</string>
    <string name="unlock">Unlock page</string>
    <string name="copy">Copy \'%s\'</string>
    <string name="remove_from_history">Remove from history</string>
    <string name="showHistory">Show history</string>
    <string name="hideHistory">Hide history</string>
    <string name="settings">Cài đặt</string>
    <string name="det">det</string>
    <string name="eigenvalue">Eigen</string>
    <string name="solve">Tìm nghiệm</string>
    <string name="dotProduct">Dot</string>
    <string name="crossProduct">Cross</string>
    <string name="determinantDesc">det</string>
    <string name="eigenvalueDesc">Eigenvalues</string>
    <string name="plus_row">+Row</string>
    <string name="minus_row">-Row</string>
    <string name="plus_col">+Col</string>
    <string name="minus_col">-Col</string>
    <string name="matrix_new" translatable="false">[ ]</string>
    <string name="matrix_inverse" translatable="false">-1</string>
    <string name="matrix_transpose">T</string>
    <string name="next">Next</string>
    <string name="hex" translatable="false">Hex</string>
    <string name="bin" translatable="false">Bin</string>
    <string name="dec" translatable="false">Dec</string>
    <string name="oct" translatable="false">Oct</string>
    <string name="hexDesc" translatable="false">Hexadecimal</string>
    <string name="dot">.</string>
    <string name="digit0" translatable="false">0</string>
    <string name="digit1" translatable="false">1</string>
    <string name="digit2" translatable="false">2</string>
    <string name="digit3" translatable="false">3</string>
    <string name="digit4" translatable="false">4</string>
    <string name="digit5" translatable="false">5</string>
    <string name="digit6" translatable="false">6</string>
    <string name="digit7" translatable="false">7</string>
    <string name="digit8" translatable="false">8</string>
    <string name="digit9" translatable="false">9</string>
    <string name="clear" translatable="false">CLR</string>
    <string name="div" translatable="false">÷</string>
    <string name="mul" translatable="false">×</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="equal" translatable="false">=</string>
    <string name="leftParen" translatable="false">(</string>
    <string name="rightParen" translatable="false">)</string>
    <string name="factorial" translatable="false">!</string>
    <string name="power" translatable="false">^</string>
    <string name="delete" translatable="false">DEL</string>
    <string name="x" translatable="false">X</string>
    <string name="comma">,</string>
    <string name="pi_symbol" translatable="false">π</string>
    <string name="m_t_kh_u_hi_n_t_i">Mật khẩu hiện tại</string>
    <string name="m_t_kh_u_m_i">Mật khẩu mới</string>
    <string name="nh_p_l_i_m_t_kh_u">Nhập lại mật khẩu</string>
    <string name="l_u">Lưu</string>
</resources>